# portfolio-page

./: .envrc  .gitignore  .gitmodules  404.html  README.md  WORKFLOW.md  flake.nix  index.html  justfile  khimoo-portfolio-111d6ad0173c00e6.js  khimoo-portfolio-111d6ad0173c00e6_bg.wasm  khimoo-portfolio-11b448972f13cdd.js  khimoo-portfolio-11b448972f13cdd_bg.wasm  khimoo-portfolio-1224b473e5d38b4d.js  khimoo-portfolio-1224b473e5d38b4d_bg.wasm  khimoo-portfolio-12d6b3e54a07d054_bg.wasm  khimoo-portfolio-1be3964a33d41c4b.js  khimoo-portfolio-1be3964a33d41c4b_bg.wasm  khimoo-portfolio-1f5a9a02caad90bc.js  khimoo-portfolio-1f5a9a02caad90bc_bg.wasm  khimoo-portfolio-2dcab2795e8a269e.js  khimoo-portfolio-2dcab2795e8a269e_bg.wasm  khimoo-portfolio-309101e2eb8e4107_bg.wasm  khimoo-portfolio-317c8ec3b9547b67.js  khimoo-portfolio-317c8ec3b9547b67_bg.wasm  khimoo-portfolio-34440b65557a06cd.js  khimoo-portfolio-34440b65557a06cd_bg.wasm  khimoo-portfolio-34912008b23b55ab_bg.wasm  khimoo-portfolio-362fdb3f4f05d272.js  khimoo-portfolio-362fdb3f4f05d272_bg.wasm  khimoo-portfolio-3d5260a31eb6efab.js  khimoo-portfolio-3d5260a31eb6efab_bg.wasm  khimoo-portfolio-405245b820bf3748_bg.wasm  khimoo-portfolio-48a4a8c1abdf4c84_bg.wasm  khimoo-portfolio-4a5a8ce137432961.js  khimoo-portfolio-4a5a8ce137432961_bg.wasm  khimoo-portfolio-4ea095a73b878e91.js  khimoo-portfolio-4ea095a73b878e91_bg.wasm  khimoo-portfolio-51b3ac10ea85d157.js  khimoo-portfolio-51b3ac10ea85d157_bg.wasm  (+97 more)
data/: .gitkeep  (+2 more)
khimoo-portfolio/: .gitattributes  Cargo.toml  REFACTORING_PLAN.md  Trunk.toml  index.html
khimoo-portfolio/articles/: README.md  about-khimoo.md  async-patterns.md  broken-link-test.md  hello.md  hobby.md  math.md  myblog.md  myworks.md  rust-async.md  tokio-basics.md  web-development.md  ガクチカ.md  プログラミング.md  個人開発.md  数学.md  絵.md  趣味.md  音楽.md
khimoo-portfolio/data/: articles.json  link-graph.json  validation-report.json  validation-report.txt  (+1 more)
(+105 files in other folders)
