[package]
name = "khimoo-portfolio"
version = "0.1.0"
edition = "2021"



# Main application
[[bin]]
name = "khimoo-portfolio"
path = "src/main.rs"

# Article processing tools (only for native builds)
[[bin]]
name = "process-articles"
path = "src/bin/process_articles.rs"
required-features = ["cli-tools"]

[[bin]]
name = "validate-links"
path = "src/bin/validate_links.rs"
required-features = ["cli-tools"]

[dependencies]
# Web framework
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
web-sys = { version = "0.3", features = ["HtmlAnchorElement", "HtmlElement", "HtmlDivElement", "Element", "DomRect", "Request", "RequestInit", "RequestMode", "Response", "Window"] }
yew-hooks = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.6"
futures = "0.3"

# Physics
rapier2d = { version = "0.26", features = ["simd-stable"] }

# Markdown processing
pulldown-cmark = "0.10"

# CLI tools dependencies
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yaml-front-matter = "0.1"
serde_yaml = "0.9"
toml = "0.8"

regex = "1.7"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Image processing (only for CLI tools)
image = { version = "0.24", optional = true }

# CLI tools dependencies (optional)
notify = { version = "6.0", optional = true }
walkdir = { version = "2.3", optional = true }

[features]
default = []
cli-tools = ["notify", "walkdir", "image"]

# Target-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "time"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
tempfile = "3.8"
